--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,6 +11,13 @@
     <li><%= listing.description %></li>
     <li>&#8377;<%= listing.price.toLocaleString('en-IN') %></li><!-- by this there will be comma btw nos like 1,22,300 -->
     <li><%= listing.location %></li>
-    <li><%= listing.country %></li>
+    <li><%= listing.country %></li><br><br>
+
+    <a href="/listings/<%= listing._id %>/edit">EDIT</a><br><br>
+
+    <form method="POST" action="/listing/<%= listing._id %>?_method=DELETE">
+        <button>DELETE</button>
+    </form>
+
 </body>
 </html>
