--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wander lust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') %>
 <body>
     <h3>show route</h3>
     <li><%= listing.title %></li>
@@ -20,4 +14,3 @@
     </form>
 
 </body>
-</html>
