--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+}
+
 /* NAVBAR */
 
 .navbar{
@@ -46,3 +50,42 @@
     justify-content: center;
     align-items: space-evenly;
 }
+
+
+
+/* CARDS */
+.card {
+    border: none !important;
+    margin-bottom: 2rem;
+
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover;
+}
+
+.card-body{
+    padding: 0 !important;
+}
+.card-text p{
+    font-weight: 400 !important;
+}
+
+
+.listing-link{
+    text-decoration: none;
+}
+
+
+/* card effect */
+.card-img-overlay{
+    opacity: 0;
+}
+
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
+}
+
