--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,19 +1,72 @@
 <% layout('/layouts/boilerplate.ejs') %>
 <body>
     <form method="POST" action="/listings">
-        <input name="listing[title]" placeholder="enter title" type="text">
-        <br><br>
-        <textarea name="listing[description]" placeholder="enter description" type="text"> </textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="enter image URL" type="text">
-        <br>
-        <input name="listing[price]" placeholder="enter price" type="number">
-        <br>
-        <br>
-        <input name="listing[country]" placeholder="enter country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="enter location" type="text">
-        <br><br>
-        <button>submit</button>
+
+        <div class="mb-3">
+            <label for="title" class="form-label">enter titile</label>
+            <input 
+                name="listing[title]" 
+                placeholder="enter title" 
+                type="text" 
+                class="form-control"
+            />
+        </div>
+
+        <div class="mb-3">
+            <label for="description" class="form-label">enter description</label>
+            <textarea 
+                name="listing[description]" 
+                placeholder="enter description" 
+                type="text" 
+                class="form-control"> 
+            </textarea>
+        </div>
+
+        <div  class="mb-3">
+            <label for="image" class="form-label">image url</label>
+            <input 
+            name="listing[image]" 
+            placeholder="enter image URL" 
+            type="text"
+            class="form-control"
+            />
+        </div>
+        
+
+        <div  class="mb-3">
+            <label for="price" class="form-label">price</label>
+            <input 
+                id="price"
+                name="listing[price]" 
+                placeholder="enter price" 
+                type="number"
+                class="form-control"
+            />
+        </div>
+
+
+        <div  class="mb-3">
+            <label for="country" class="form-label">country</label>
+            <input 
+                id="country"
+                name="listing[country]" 
+                placeholder="enter country" 
+                type="text"
+                class="form-control"
+            />
+        </div>
+
+
+        <div  class="mb-3">
+            <label for="location" class="form-label">location</label>
+            <input 
+                id="location"
+                name="listing[location]" 
+                placeholder="enter location" 
+                type="text"
+                class="form-control"
+            />
+        </div><br>
+        <button class="btn btn-dark">submit</button>
     </form>
 </body>
