--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,5 +1,11 @@
 body {
     font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex: 1;
 }
 
 /* NAVBAR */
@@ -87,5 +93,10 @@ body {
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+.add-btn{
+    background-color: #fe424d !important;   
+    border: none !important;
 }
 
