complted edit.ejs

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -95,7 +95,14 @@ body {
     background-color: white;
 }
 
+/* new page */
 .add-btn{
+    background-color: #fe424d !important;   
+    border: none !important;
+}
+
+/* edit page */
+.edit-btn{
     background-color: #fe424d !important;   
     border: none !important;
 }
