--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -107,3 +107,18 @@ body {
     border: none !important;
 }
 
+/* show Page */
+
+.show-image{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+}
+
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
+}
+
