--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,16 +1,33 @@
 <% layout('/layouts/boilerplate.ejs') %>
-<body>
-    <h3>show route</h3>
-    <li><%= listing.title %></li>
-    <li><%= listing.description %></li>
-    <li>&#8377;<%= listing.price.toLocaleString('en-IN') %></li><!-- by this there will be comma btw nos like 1,22,300 -->
-    <li><%= listing.location %></li>
-    <li><%= listing.country %></li><br><br>
+<div class="row mt-3">
+    <div class="col-8 offset-3">
+        <h3>listing  details</h3>
+    </div>
 
-    <a href="/listings/<%= listing._id %>/edit">EDIT</a><br><br>
+    <div class="card  col-6 offset-3 show-card">
+        <img src="<%=listing.image.url%>" class="card-img-top show-image " alt="listing_image">
+        <div class="card-body">
+            <p class="card-text">
+                <b><%= listing.title %></b><br>
+                <%= listing.description %><br>
+                &#8377;<%= listing.price.toLocaleString('en-IN') %><br>
+                <%= listing.location %><br>
+                <%= listing.country %><br>
+            </p>
+        </div>
+    </div>
+</div>
+<div class="btns">
+
+    <a 
+        href="/listings/<%= listing._id %>/edit"
+        class="btn btn-dark col-1 offset-3 edit-btn">
+        EDIT</a
+    >
 
     <form method="POST" action="/listing/<%= listing._id %>?_method=DELETE">
-        <button>DELETE</button>
+        <button class="btn btn-dark offset-5">DELETE</button>
     </form>
 
-</body>
+</div>
+
