--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,84 +1,93 @@
 <% layout('/layouts/boilerplate.ejs') %>
-<body>
-    <div class="row">
-        <div class="col-8 offset-2">
-            <br><h2>Edit your listing</h2>
-            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
-                <br>
-                <div class="mb-3">
-                    <label for="title" class="form-label">enter title</label>
+
+<div class="row">
+    <div class="col-8 offset-2">
+        <br><h2>Edit your listing</h2>
+        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+            <br>
+            <div class="mb-3">
+                <label for="title" class="form-label">enter title</label>
+                <input 
+                    id="title"
+                    name="listing[title]" 
+                    value="<%= listing.title %>" 
+                    type="text" 
+                    class="form-control" 
+                    placeholder="enter title"
+                    required
+                />
+                <div class="invalid-feedback">title should be valid</div>
+            </div><br>
+
+            <div class="mb-3">
+                <label for="description" class="form-label">enter description</label>
+                <textarea 
+                    id="description"
+                    name="listing[description]" 
+                    class="form-control" 
+                    placeholder="enter description"
+                    required><%= listing.description %></textarea>
+                    <div class="invalid-feedback">enter a short discription</div>
+            </div><br>
+
+            <div class="mb-3">
+                <label for="image" class="form-label">image url</label>
+                <input 
+                    id="image"
+                    name="listing[image]" 
+                    value="<%= listing.image %>" 
+                    type="text" 
+                    class="form-control" 
+                    placeholder="enter image URL"                        required
+                />
+                
+            </div><br>
+
+            <div class="row">
+                <div class="mb-3 col-md-4">
+                    <label for="price" class="form-label">price</label>
                     <input 
-                        id="title"
-                        name="listing[title]" 
-                        value="<%= listing.title %>" 
-                        type="text" 
+                        id="price"
+                        name="listing[price]" 
+                        value="<%= listing.price %>" 
+                        type="number" 
                         class="form-control" 
-                        placeholder="enter title"
+                        placeholder="enter price"
+                        required
                     />
-                </div><br>
-
-                <div class="mb-3">
-                    <label for="description" class="form-label">enter description</label>
-                    <textarea 
-                        id="description"
-                        name="listing[description]" 
-                        class="form-control" 
-                        placeholder="enter description"
-                    ><%= listing.description %></textarea>
-                </div><br>
-
-                <div class="mb-3">
-                    <label for="image" class="form-label">image url</label>
-                    <input 
-                        id="image"
-                        name="listing[image]" 
-                        value="<%= listing.image %>" 
-                        type="text" 
-                        class="form-control" 
-                        placeholder="enter image URL"
-                    />
-                </div><br>
-
-                <div class="row">
-                    <div class="mb-3 col-md-4">
-                        <label for="price" class="form-label">price</label>
-                        <input 
-                            id="price"
-                            name="listing[price]" 
-                            value="<%= listing.price %>" 
-                            type="number" 
-                            class="form-control" 
-                            placeholder="enter price"
-                        />
-                    </div>
-
-                    <div class="mb-3 col-md-8">
-                        <label for="country" class="form-label">country</label>
-                        <input 
-                            id="country"
-                            name="listing[country]" 
-                            value="<%= listing.country %>" 
-                            type="text" 
-                            class="form-control" 
-                            placeholder="enter country"
-                        />
-                    </div>
+                    <div class="invalid-feedback">price should be valid</div>
                 </div>
 
-                <div class="mb-3">
-                    <label for="location" class="form-label">location</label>
+                <div class="mb-3 col-md-8">
+                    <label for="country" class="form-label">country</label>
                     <input 
-                        id="location"
-                        name="listing[location]" 
-                        value="<%= listing.location %>" 
+                        id="country"
+                        name="listing[country]" 
+                        value="<%= listing.country %>" 
                         type="text" 
                         class="form-control" 
-                        placeholder="enter location"
+                        placeholder="enter country"
+                        required
                     />
+                    <div class="invalid-feedback">country should be valid</div>
                 </div>
-                <button type="submit" class="btn btn-dark edit-btn">Submit</button><br><br>
-            </form>
-        </div>
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label">location</label>
+                <input 
+                    id="location"
+                    name="listing[location]" 
+                    value="<%= listing.location %>" 
+                    type="text" 
+                    class="form-control" 
+                    placeholder="enter location"
+                    required
+                />
+                <div class="invalid-feedback">location should be valid</div>
+            </div>
+            <button type="submit" class="btn btn-dark edit-btn">Submit</button><br><br>
+        </form>
     </div>
-</body>                 
+</div>
+<script src="/JS/script.js"></script><!--form validation script-->     
 
