--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -17,6 +17,7 @@
                         required
                     />
                     <div class="invalid-feedback">please enter a valid title</div>
+                    <div class="valid-feedback">nice title</div>
                 </div><br>        
 
                 <div class="mb-3">
@@ -27,6 +28,7 @@
                         type="text" 
                         class="form-control"
                         required></textarea>
+                        <div class="invalid-feedback">please enter a short discription</div>
                 </div><br>
         
                 <div  class="mb-3">
@@ -35,9 +37,9 @@
                     name="listing[image]" 
                     placeholder="enter image URL" 
                     type="text"
-                    class="form-control"
-                    required
+                    class="form-control"`
                     />
+
                 </div><br>
                 
                 <div class="row">
@@ -51,6 +53,7 @@
                             class="form-control"
                             required
                         />
+                        <div class="invalid-feedback">price should be valid</div>
                     </div>
             
             
@@ -64,6 +67,7 @@
                             class="form-control"
                             required
                         />
+                        <div class="invalid-feedback">country name should be valid</div>
                     </div>
                 </div>
           
@@ -79,6 +83,7 @@
                         class="form-control"
                         required
                     />
+                    <div class="invalid-feedback">location should be valid</div>
                 </div>
                 <button class="btn btn-dark add-btn" >submit</button><br><br>
             </form>
