validation of schema using joi(module)

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -25,7 +25,7 @@
         EDIT</a
     >
 
-    <form method="POST" action="/listing/<%= listing._id %>?_method=DELETE">
+    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
         <button class="btn btn-dark offset-5">DELETE</button>
     </form>
 
