--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -15,18 +15,39 @@
             </p>
         </div>
     </div>
-</div>
-<div class="btns">
 
-    <a 
-        href="/listings/<%= listing._id %>/edit"
-        class="btn btn-dark col-1 offset-3 edit-btn">
-        EDIT</a
-    >
+    <div class="btns">
+        <a 
+            href="/listings/<%= listing._id %>/edit"
+            class="btn btn-dark col-1 offset-3 edit-btn">
+            EDIT</a
+        >
 
-    <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button class="btn btn-dark offset-5">DELETE</button>
-    </form>
+        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+            <button class="btn btn-dark offset-5">DELETE</button>
+        </form>
+    </div>
 
+    <div class="col-8 offset-3 mb-3">
+        <hr><h4>Leave a review</h4>
+        <form action="/listings/<%= listing.id %>/reviews" method="POST">
+            <div class="mb-3 mt-3">
+                <label for="review" class="form-label"></label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating] " class="form-range">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea 
+                    name="review[comment]" 
+                    id="comment" 
+                    cols="30" 
+                    rows="5"
+                    class="form-control"
+                ></textarea>
+            </div>
+            <button class="btn btn-outline-dark ">submit</button>
+        </form>
+    </div>
+    
 </div>
 
