--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -30,10 +30,10 @@
 
     <div class="col-8 offset-3 mb-3">
         <hr><h4>Leave a review</h4>
-        <form action="/listings/<%= listing.id %>/reviews" method="POST">
+        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation" >
             <div class="mb-3 mt-3">
-                <label for="review" class="form-label"></label>
-                <input type="range" min="1" max="5" id="rating" name="review[rating] " class="form-range">
+                <label for="review" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" required>
             </div>
             <div class="mb-3 mt-3">
                 <label for="comment" class="form-label">Comments</label>
@@ -43,7 +43,9 @@
                     cols="30" 
                     rows="5"
                     class="form-control"
+                    required
                 ></textarea>
+                <div class="invalid-feedback">please add some comments for review </div>
             </div>
             <button class="btn btn-outline-dark ">submit</button>
         </form>
