--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -49,6 +49,18 @@
             </div>
             <button class="btn btn-outline-dark ">submit</button>
         </form>
+
+        <hr>
+
+        <h4>all review!</h4>
+        <ul>
+            <%for (review of listing.reviews) {%>
+            <li><%= review.comment %> , <%= review.rating %> stars</li>  
+            <% } %>
+        </ul>
+
+
+
     </div>
     
 </div>
