--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,7 +4,7 @@
         <h3><%= listing.title %></h3>
     </div>
 
-    <div class="card  col-6 offset-3 show-card">
+    <div class="card  col-6 offset-3 show-card listing-card ">
         <img src="<%=listing.image.url%>" class="card-img-top show-image " alt="listing_image">
         <div class="card-body">
             <p class="card-text">
@@ -52,13 +52,19 @@
 
         <hr>
 
-        <h4>all review!</h4>
-        <ul>
-            <%for (review of listing.reviews) {%>
-            <li><%= review.comment %> , <%= review.rating %> stars</li>  
-            <% } %>
-        </ul>
+        <p><b>All reviews</b></p>
 
+        <div class="row">
+            <% for (review of listing.reviews) {%>
+                <div class="card col-5 ms-3 mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Hari</h5>
+                        <p class="card-text"><%= review.comment %></p>
+                        <p class="card-text"><%= review.rating %>Stars</p>
+                    </div>
+                </div> 
+            <% } %>
+        </div>
 
 
     </div>
