--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -61,6 +61,13 @@
                         <h5 class="card-title">Hari</h5>
                         <p class="card-text"><%= review.comment %></p>
                         <p class="card-text"><%= review.rating %>Stars</p>
+                        <form 
+                        class="mb-3" 
+                        method="POST" 
+                        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                        >
+                            <button class="btn btn-dark btn-sm">Delete</button>
+                        </form>
                     </div>
                 </div> 
             <% } %>
