--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,6 @@
 <% layout('/layouts/boilerplate.ejs') %>
 <body>
+    <%= success %>
     <h3>ALL LISTINGS!!</h3>
     <!-- <form method="GET" action="/listings/new" >
         <button>add new </button>
