--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -10,3 +10,15 @@
     </div>
 <% } %>
 
+<% if(error && error.length){ %> <!-- to avoid showing empty alerts -->
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= error %>
+        <button 
+            type="button"
+            class="btn-close" 
+            data-bs-dismiss="alert" 
+            aria-label="Close"
+        ></button>
+    </div>
+<% } %>
+
