--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate.ejs') %>
 <body>
 
-    <div class="row">
+    <div class="row mt-3">
 
         <div class="col-8 offset-2 ">
             <br><h2>Create new listing!!</h2>
