--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -10,6 +10,17 @@
         <a class="nav-link" href="/listings">all listings</a>
         <a class="nav-link" href="/listings/new">Add new listings</a>
       </div>
+      <div class="navbar-nav ms-auto">
+        <% if (!currentUser){ %>
+          <a class="nav-link" aria-current="page" href="/signup">signup</a>
+          <a class="nav-link" href="/login">login</a>
+        <% } %>
+        <% if(currentUser){ %>
+          <a class="nav-link" href="/logout">logout</a> 
+        <% } %>
+        
+        
+      </div>
     </div>
   </div>
 </nav>
