--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -35,7 +35,7 @@
                 <input 
                     id="image"
                     name="listing[image]" 
-                    value="<%= listing.image %>" 
+                    value="<%= listing.image.url %>" 
                     type="text" 
                     class="form-control" 
                     placeholder="enter image URL"                        required
