--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -14,7 +14,7 @@
             <p class="card-text"><%= listing.country %></p>
         </div>
     </div>
-
+    <% if(currentUser && currentUser._id.equals(listing.owner._id)){ %>
         <div class="btns">
             <a 
                 href="/listings/<%= listing._id %>/edit"
@@ -26,31 +26,34 @@
                 <button class="btn btn-dark offset-5">DELETE</button>
             </form>
         </div>
+    <% } %>
 
 
-    <div class="col-8 offset-3 mb-3">
-        <hr><h4>Leave a review</h4>
-        <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation" >
-            <div class="mb-3 mt-3">
-                <label for="review" class="form-label">Rating</label>
-                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" required>
-            </div>
-            <div class="mb-3 mt-3">
-                <label for="comment" class="form-label">Comments</label>
-                <textarea 
-                    name="review[comment]" 
-                    id="comment" 
-                    cols="30" 
-                    rows="5"
-                    class="form-control"
-                    required
-                ></textarea>
-                <div class="invalid-feedback">please add some comments for review </div>
-            </div>
-            <button class="btn btn-outline-dark ">submit</button>
-        </form>
+        <div class="col-8 offset-3 mb-3">
+        <% if(currentUser){ %>
+            <hr><h4>Leave a review</h4>
+            <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation" >
+                <div class="mb-3 mt-3">
+                    <label for="review" class="form-label">Rating</label>
+                    <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range" required>
+                </div>
+                <div class="mb-3 mt-3">
+                    <label for="comment" class="form-label">Comments</label>
+                    <textarea 
+                        name="review[comment]" 
+                        id="comment" 
+                        cols="30" 
+                        rows="5"
+                        class="form-control"
+                        required
+                    ></textarea>
+                    <div class="invalid-feedback">please add some comments for review </div>
+                </div>
+                <button class="btn btn-outline-dark ">submit</button>
+            </form>
+        <% } %>
 
-        <hr>
+        <br><hr>
 
         <p><b>All reviews</b></p>
 
