implemented MVC for /listing

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -33,15 +33,14 @@
             <div class="mb-3">
                 <label for="image" class="form-label">image url</label>
                 <input 
-                    id="image"
-                    name="listing[image]" 
-                    value="<%= listing.image.url %>" 
-                    type="text" 
-                    class="form-control" 
-                    placeholder="enter image URL"                        required
+                  id="image"
+                  name="listing[image]" 
+                  value="<%= listing.image %>" 
+                  type="text" 
+                  class="form-control" 
+                  placeholder="enter image URL"                        
                 />
-                
-            </div><br>
+              </div>
 
             <div class="row">
                 <div class="mb-3 col-md-4">
