--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -31,16 +31,16 @@
                         <div class="invalid-feedback">please enter a short discription</div>
                 </div><br>
         
-                <div  class="mb-3">
+                <div class="mb-3">
                     <label for="image" class="form-label">image url</label>
                     <input 
-                    name="listing[image]" 
-                    placeholder="enter image URL" 
-                    type="text"
-                    class="form-control"`
+                      id="image"
+                      name="listing[image]" 
+                      type="text" 
+                      class="form-control" 
+                      placeholder="enter image URL"
                     />
-
-                </div><br>
+                </div>
                 
                 <div class="row">
                     <div  class="mb-3 col-md-4">
