Ignore .env file

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,7 +5,8 @@
 
         <div class="col-8 offset-2 ">
             <br><h2>Create new listing!!</h2>
-            <form method="POST" action="/listings" novalidate class="needs-validation">
+            <form method="POST" action="/listings" novalidate class="needs-validation" enctype="multipart/form-data">
+                <!--enctype="multipart/form-data" is used to upload images-->
                 <br>
                 <div class="mb-3">
                     <label for="title" class="form-label">enter titile</label>
@@ -29,19 +30,17 @@
                         class="form-control"
                         required></textarea>
                         <div class="invalid-feedback">please enter a short discription</div>
-                </div><br>
-        
+                </div><br>        
                 <div class="mb-3">
-                    <label for="image" class="form-label">image url</label>
+                    <label for="image" class="form-label">upload image </label>
                     <input 
                       id="image"
                       name="listing[image]" 
-                      type="text" 
+                      type="file" 
                       class="form-control" 
-                      placeholder="enter image URL"
                     />
                 </div>
-                
+
                 <div class="row">
                     <div  class="mb-3 col-md-4">
                         <label for="price" class="form-label">price</label>
