--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,7 +3,13 @@
 <div class="row">
     <div class="col-8 offset-2">
         <br><h2>Edit your listing</h2>
-        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+        <form 
+            method="POST" 
+            action="/listings/<%= listing._id %>?_method=PUT" 
+            novalidate 
+            class="needs-validation"
+            enctype="multipart/form-data"
+        >
             <br>
             <div class="mb-3">
                 <label for="title" class="form-label">enter title</label>
@@ -31,14 +37,17 @@
             </div><br>
 
             <div class="mb-3">
-                <label for="image" class="form-label">image url</label>
+                Original listing image<br>
+                <img src="<%= originalImageUrl %>" />
+            </div>
+
+            <div class="mb-3">
+                <label for="image" class="form-label">upload new image </label>
                 <input 
                   id="image"
                   name="listing[image]" 
-                  value="<%= listing.image %>" 
-                  type="text" 
-                  class="form-control" 
-                  placeholder="enter image URL"                        
+                  type="file" 
+                  class="form-control"                      
                 />
               </div>
 
