--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -32,12 +32,13 @@
                         <div class="invalid-feedback">please enter a short discription</div>
                 </div><br>        
                 <div class="mb-3">
-                    <label for="image" class="form-label">upload image </label>
+                    <label for="image" class="form-label">upload new image </label>
                     <input 
                       id="image"
                       name="listing[image]" 
                       type="file" 
                       class="form-control" 
+                      required
                     />
                 </div>
 
