--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,8 @@
 <% layout('/layouts/boilerplate.ejs') %>
+<script>
+    const mapToken = "<%=  process.env.MAP_TOKEN  %>"
+    console.log("Map token available:", !!mapToken);
+</script>
 <div class="row mt-3">
     <div class="col-8 offset-3">
         <h3><%= listing.title %></h3>
@@ -106,29 +110,38 @@
 
         <br><hr>
 
-        <p><b>All reviews</b></p>
-
-        <div class="row">
-            <% for (review of listing.reviews) {%>
-                <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">@<%= review.author.username %></h5>
-                        <p class="starability-result" data-rating=<%= review.rating %> ></p>
-                        <p class="card-text"><%= review.comment %></p>
-                        <form 
-                        class="mb-3" 
-                        method="POST" 
-                        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-                        >
-                            <button class="btn btn-dark btn-sm">Delete</button>
-                        </form>
-                    </div>
-                </div> 
-            <% } %>
-        </div>
-
-
+        
+        <% if(listing.reviews.length > 0){ %>
+            <div class="row">
+                <p><b>All reviews</b></p>
+                <% for (review of listing.reviews) {%>
+                    <div class="card col-5 ms-3 mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">@<%= review.author.username %></h5>
+                            <p class="starability-result" data-rating=<%= review.rating %> ></p>
+                            <p class="card-text"><%= review.comment %></p>
+                            <form 
+                            class="mb-3" 
+                            method="POST" 
+                            action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                            >
+                                <button class="btn btn-dark btn-sm">Delete</button>
+                            </form>
+                        </div>
+                    </div> 
+                <% } %>
+            </div>
+        <% } %>            
+    </div>
+    <div class="col-8 offset-3 mb-3">
+        <h3>You will be here</h3>
+        <div id="map" ></div>
     </div>
     
 </div>
+
+
+<script src="/JS/map.js"></script>
+
+
 
