--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate.ejs') %>
 <script>
     const mapToken = "<%=  process.env.MAP_TOKEN  %>"
-    console.log("Map token available:", !!mapToken);
+    const coordinates = <%- JSON.stringify(listing.geometry.coordinates )%>
 </script>
 <div class="row mt-3">
     <div class="col-8 offset-3">
