--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,97 @@
 <% layout('/layouts/boilerplate.ejs') %>
 <body>
     <!-- <%= success %> -->
-    <h3>ALL LISTINGS!!</h3>
+    <!-- <h3>ALL LISTINGS!!</h3> -->
     <!-- <form method="GET" action="/listings/new" >
         <button>add new </button>
     </form> -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <style>
+        #filters{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+
+        .filter{
+            text-align: center;
+            margin-right: 2rem;
+            margin-top: 2rem;
+            opacity: 0.7;
+        }
+
+        .filter:hover{
+            opacity : 1;
+            cursor  : pointer;
+        }
+        .filter p{
+            font-size: 0.8rem;
+        }
+        .taxinfo{
+            display: none;
+        }
+        .tax-toggle{
+            border: 1px solid black;
+            border-radius: 1rem;
+            height: 2.5rem;
+            padding: 1rem;
+            margin-left: 2rem;
+            display: flex;
+            align-items: center;
+        }
+
+    </style>
+
+
+    <div id="filters">
+        <div class="filter">
+            <div> <i class="fa-solid fa-fire"></i> </div>
+            <p>Trending</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-bed"></i> </div>
+            <p>Bedroom</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-mountain-city"></i> </div>
+            <p>Iconic cities</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-mountain-sun"> </i></div>
+            <p>Mountains</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-brands fa-fort-awesome"></i> </div>
+            <p>Castles</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-campground"></i> </div>
+            <p>camping</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-tractor"></i> </div>
+            <p>Farming</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-snowflake"></i> </div>
+            <p>Snow</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-igloo"></i> </div>
+            <p>Doms</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-ship"></i></div>
+            <p>boats</p>
+        </div>
+        <div class="tax-toggle">
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Display total after taxes</label>
+              </div>
+        </div>
+    </div>
+    
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for (let listing of allListings) { %> 
             <a href="/listings/<%= listing._id %>" class="listing-link">
 
@@ -17,6 +103,7 @@
                         <p class="card-text">
                             <b><%= listing.title %></b><br>
                             &#8377;<%= listing.price.toLocaleString('en-IN') %>/Night
+                            <i class="taxinfo"> &nbsp; &nbsp; +18% gst</i>
                         </p>
                     </div>
                 </div>
@@ -27,3 +114,18 @@
     </div>
 
 </body>
+
+
+<script>
+    let taxswitch = document.getElementById("flexSwitchCheckDefault");
+    taxswitch.addEventListener("click" , ()=>{
+        let taxinfo = document.getElementsByClassName("taxinfo");
+        for(info of taxinfo){
+            if(info.style.display != "inline"){
+                info.style.display = "inline" ;
+            }else{
+                info.style.display = "none";
+            }
+        }
+    });
+</script>
