--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,23 @@
+<style>
+  .search-btn{
+    background-color: #fe242d;
+    color: #fff;
+    border-radius: 25px;
+    padding:  0 1rem 0  1rem;
+  }
+  .search-btn:hover{
+    background-color: #fe242d;
+    color: #fff;
+  }
+  .search-input{
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    font-size: 1rem;
+
+  }
+
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="fa-compass" href="/listings"><i class="fa-regular fa-compass"></i></a>
@@ -7,6 +27,14 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2 search-input" type="search" placeholder="Search destination"/>
+          <button class="btn search-btn" type="submit">
+            Search
+          </button>
+        </form>
       </div>
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
