--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -14,9 +14,12 @@
 
         .filter{
             text-align: center;
-            margin-right: 2rem;
+            margin-right: 2.6rem;
             margin-top: 2rem;
             opacity: 0.7;
+        }
+        .filter i{
+            font-size: 1.3rem;
         }
 
         .filter:hover{
@@ -78,6 +81,10 @@
         <div class="filter">
             <div> <i class="fa-solid fa-igloo"></i> </div>
             <p>Doms</p>
+        </div>
+        <div class="filter">
+            <div> <i class="fa-solid fa-ship"></i></div>
+            <p>boats</p>
         </div>
         <div class="filter">
             <div> <i class="fa-solid fa-ship"></i></div>
