added enter for submit

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -124,6 +124,7 @@
 
 
 <script>
+    //this is for displaying taxes
     let taxswitch = document.getElementById("flexSwitchCheckDefault");
     taxswitch.addEventListener("click" , ()=>{
         let taxinfo = document.getElementsByClassName("taxinfo");
